inserite metriche ed equazioni mancanti e sostituiti termini inadeguati

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -63,50 +63,50 @@
 \newpage
 \section{Visione generale della strategia di gestione della qualità}
 	\subsection{Obiettivi di qualità}
-	In questa sezione vengono illustrati in modo quanto più completo ed esaustivo gli obiettivi di qualità che il \gloss{team} intende perseguire nel corso dello svolgimento del progetto, opportunamente declinati nelle due sottosezioni Qualità di processo e Qualità di prodotto.
-\\Ogni obiettivo di qualità in seguito riportato risulta associato ad un identificativo univoco in modo tale da rendere possibile un efficacie tracciamento fra l'obiettivo di qualità da soddisfare e la metrica scelta allo scopo di verificarne il soddisfacimento.
+	In questa sezione vengono illustrati in modo quanto più completo ed esaustivo gli obiettivi di qualità che il \gloss{team} intende perseguire nel corso 	dello svolgimento del progetto, opportunamente declinati nelle due sottosezioni Qualità di processo e Qualità di prodotto.
+	\\Ogni obiettivo di qualità in seguito riportato risulta associato ad un identificativo univoco in modo tale da rendere possibile un efficacie 				tracciamento fra l'obiettivo di qualità da soddisfare e la metrica scelta allo scopo di verificarne il soddisfacimento.
 
 	\subsection{Qualità di processo}
-	È indubbio che la qualità di un prodotto software non possa in alcun modo prescindere dalla qualità dei diversi processi che concorrono nel definirlo e che anzi ne sia intrinsecamente dipendente. Con tale consapevolezza il gruppo ha scelto come riferimento per la valutazione della qualità dei propri processi lo standard ISO/IEC 15504 altresì conosciuto sotto l'acronimo di \gloss{SPICE}.
+	È indubbio che la qualità di un prodotto software non possa in alcun modo prescindere dalla qualità dei diversi processi che concorrono nel definirlo e 	che anzi ne sia intrinsecamente dipendente. Con tale consapevolezza il gruppo ha scelto come riferimento per la valutazione della qualità dei propri 		processi lo standard ISO/IEC 15504 altresì conosciuto sotto l'acronimo di \gloss{SPICE}.
 		\subsubsection{Standard adottato}
-		Lo standard prevede sei diversi livelli di maturità (o capacità), e 9 attributi di processo che, se posseduti, lo portano ad un certo livello di capacità.
+		Lo standard prevede sei diversi livelli di maturità (o capacità), e 9 attributi di processo che, se posseduti, lo portano ad un certo livello di 			capacità.
 		\begin{itemize}
-		\item \textbf{Livello 0: Incompleto} il processo non è implementato o non raggiunge il suo obiettivo;   non esiste evidenza di esecuzione sistematica delle attività che lo compongono.
-		 \item \textbf{Livello 1: Attuato} il processo è implementato e raggiunge il suo obiettivo; esiste evidenza di semplice attuazione delle attività che lo compongono.
-Il relativo attributo di processo:
+		\item \textbf{Livello 0: Incompleto} il processo non è implementato o non raggiunge il suo obiettivo;   non esiste evidenza di esecuzione 					sistematica delle attività che lo compongono.
+		 \item \textbf{Livello 1: Attuato} il processo è implementato e raggiunge il suo obiettivo; esiste evidenza di semplice attuazione delle attività 			che lo compongono.
+		Il relativo attributo di processo:
 			\begin{itemize}
-				\item \emph{Esecuzione del Processo:} la misura in cui il processo raggiunge i propri obiettivi trasformando   prodotti in ingresso identificabili in prodotti in uscita identificabili.
+				\item \emph{Esecuzione del Processo:} la misura in cui il processo raggiunge i propri obiettivi trasformando   prodotti in ingresso 						identificabili in prodotti in uscita identificabili.
 			\end{itemize}
-		\item \textbf{Livello 2: Gestito}il processo è gestito e i suoi prodotti sono stabiliti, controllati e manutenuti; le attività sono pianificate e controllate e il loro svolgimento risulta documentato.
-I relativi attributi di processo:
+		\item \textbf{Livello 2: Gestito}il processo è gestito e i suoi prodotti sono stabiliti, controllati e manutenuti; le attività sono pianificate e 			controllate e il loro svolgimento risulta documentato.
+		I relativi attributi di processo:
 			\begin{itemize}
 				\item \emph{Gestione delle Prestazioni:} la misura in cui il processo produce un risultato coerente con gli obiettivi attesi.
 				\item \emph{Gestione dei Prodotti:} la misura in cui il processo viene gestito per elaborare prodotti documentati, controllati e verificati in modo appropriato.
 			\end{itemize}
  	
 		\item \textbf{Livello 3: Definito} il processo viene eseguito in base ai principi dell'ingegneria del software. Le procedure sono definite e adattate ai progetti e ruoli, competenze e responsabilità sono definiti e controllati.
-I relativi attributi di processo:
+		I relativi attributi di processo:
 			\begin{itemize}
 				\item \emph{Definizione del Processo:} la misura in cui il processo raggiunge i risultati attesi aderendo ad un particolare standard di processo.
 				\item \emph{Utilizzo del Processo:} la misura in cui il processo attinge alle risorse allocate per la sua esecuzione.	
 			\end{itemize}
 			
 		\item \textbf{Livello 4: Predicibile} il processo è messo in atto costantemente entro limiti definiti. Le attività che lo compongono, la loro gestione e i relativi risultati sono controllati quantitativamente.
-I relativi attributi di processo:
+		I relativi attributi di processo:
 			\begin{itemize}
 				\item \emph{Misurazione del Processo:} la misura in cui il processo utilizza i risultati raggiunti e le misure ricavate durante l'esecuzione per garantire il raggiungimento dei traguardi definiti.
 				\item \emph{Controllo del Processo:} la misura in cui il processo viene controllato tramite la raccolta, l'analisi e la messa in uso di misurazioni di prodotto e processo allo scopo di correggere, ove necessario, la sua esecuzione per raggiungere i risultati attesi.	
 			\end{itemize}
 
 		\item \textbf{Livello 5: Ottimizzante} il processo è continuativamente migliorato per soddisfare i rilevanti traguardi di business attuali e previsti. I cambiamenti del processo sono valutati e lo studio per il miglioramento è un'attività costante.
-I relativi attributi di processo:
+		I relativi attributi di processo:
 			\begin{itemize}
 				\item \emph{Innovazione del Processo:} la misura in cui cambiamenti relativi alla definizione, alla gestione e all'esecuzione del processo sono controllati per raggiungere gli obiettivi di business dell'organizzazione.
 				\item \emph{Ottimizzazione del Processo:} la misura in cui vengono identificati e implementati cambiamenti relativamente all'esecuzione del processo in modo tale da assicurare un miglioramento continuo nel raggiungimento degli obiettivi rilevanti dell'organizzazione.
 			\end{itemize}
 		\end{itemize}
 
-Ogni attributo di processo è misurabile e sono definiti dallo standard 4 diversi gradi di possesso:
+	Ogni attributo di processo è misurabile e sono definiti dallo standard 4 diversi gradi di possesso:
 	\begin{itemize}
 		\item \textbf{N:} non posseduto (0\% - 15\%);
 		\item \textbf{P:} parzialmente posseduto (16\% - 50\%);
@@ -114,59 +114,64 @@ Ogni attributo di processo è misurabile e sono definiti dallo standard 4 divers
 		\item \textbf{F:} completamente posseduto (86\% - 100\%).
 	\end{itemize}
 
-Le misurazioni e le valutazioni risultanti dal monitoraggio dei diversi processi sono usate nel contesto di una strategia di miglioramento continuo della qualità, realizzata attraverso il ciclo \gloss{PDCA}.
-\\Il ciclo \gloss{PDCA}, altresì noto come ciclo di Deming, definisce un'organizzazione interna dei processi incentrata sul principio del miglioramento continuo allo scopo di renderli automigliorativi.
-\\Le fasi in cui esso si articola sono 4:
-	\begin{itemize}
-		\item \textbf{Pianificare (Plan):} in tale fase vengono definite attività, scadenze, responsabilità, risorse utili a raggiungere specifici obiettivi di miglioramento opportunamente pianificati.
-		\item \textbf{Eseguire (Do):} in questa fase vengono attuate le azioni migliorative pianificate al passo precedente. Si procede inoltre ad eseguire misurazioni e raccogliere dati utili per le successive fasi di analisi e controllo.
-		\item \textbf{Valutare (Check):} si tratta di una fase di verifica in cui l'esito delle azioni di miglioramento viene confrontato rispetto alle attese e agli obiettivi pianificati.
-		\item \textbf{Agire (Act):} se l'esito delle valutazioni effettuate al passo precedente risulta positivo, i cambiamenti introdotti nell'esecuzione del processo vengono incorporati stabilmente in esso e standardizzati.
-	\end{itemize}
+	Le misurazioni e le valutazioni risultanti dal monitoraggio dei diversi processi sono usate nel contesto di una strategia di miglioramento continuo della qualità, realizzata attraverso il ciclo \gloss{PDCA}.
+	\\Il ciclo \gloss{PDCA}, altresì noto come ciclo di Deming, definisce un'organizzazione interna dei processi incentrata sul principio del miglioramento continuo allo scopo di renderli automigliorativi.
+	\\Le fasi in cui esso si articola sono 4:
+		\begin{itemize}
+			\item \textbf{Pianificare (Plan):} in tale fase vengono definite attività, scadenze, responsabilità, risorse utili a raggiungere specifici obiettivi di miglioramento opportunamente pianificati.
+			\item \textbf{Eseguire (Do):} in questa fase vengono attuate le azioni migliorative pianificate al passo precedente. Si procede inoltre ad eseguire misurazioni e raccogliere dati utili per le successive fasi di analisi e controllo.
+			\item \textbf{Valutare (Check):} si tratta di una fase di verifica in cui l'esito delle azioni di miglioramento viene confrontato rispetto alle attese e agli obiettivi pianificati.
+			\item \textbf{Agire (Act):} se l'esito delle valutazioni effettuate al passo precedente risulta positivo, i cambiamenti introdotti nell'esecuzione del processo vengono incorporati stabilmente in esso e standardizzati.
+		\end{itemize}
 
 		\subsubsection{Procedure per il controllo della qualità di processo}
 		L'adozione dello standard \gloss{SPICE}, in combinazione con l'approccio automigliorativo del 		ciclo \gloss{PDCA}, è alla base della strategia prevista del gruppo per garantire una sempre maggiore qualità dei processi in atto e dei prodotti risultanti.
-\\Il documento \PdP stabilisce gli obiettivi del gruppo in relazione alla pianificazione in dettaglio dei vari processi e alla ripartizione delle risorse ad essi assegnate per un efficacie svolgimento. Altri obiettivi di qualità sono illustrati successivamente in questo documento.
-\\Le metriche utilizzate dal gruppo per valutare la qualità dei processi, commisurarla agli obiettivi stabiliti e stabilire eventuali azioni correttive di miglioramento sono definiti in dettaglio nella sezione \ref{S5} del seguente documento. Da sottolineare che anche le metriche relative alla qualità del prodotto software costituiscono un'indicazione preziosa per valutare la qualità dei processi in atto: infatti un prodotto di bassa qualità è indicativo di un processo da migliorarsi.
+		\\Il documento \PdP stabilisce gli obiettivi del gruppo in relazione alla pianificazione in dettaglio dei vari processi e alla ripartizione delle risorse ad essi assegnate per un efficacie svolgimento. Altri obiettivi di qualità sono illustrati successivamente in questo documento.
+		\\Le metriche utilizzate dal gruppo per valutare la qualità dei processi, commisurarla agli obiettivi stabiliti e stabilire eventuali azioni correttive di miglioramento sono definiti in dettaglio nella sezione \ref{S5} del seguente documento. Da sottolineare che anche le metriche relative alla qualità del prodotto software costituiscono un'indicazione preziosa per valutare la qualità dei processi in atto: infatti un prodotto di bassa qualità è indicativo di un processo da migliorarsi.
 
 		\subsubsection{Obiettivi di qualità di processo}
 		In questa sezione vengono elencati i principali processi software identificati dal team sulla base dello standard \gloss{SPICE} e per ognuno di essi gli obiettivi di qualità perseguiti.
 			\paragraph{Pianificazione di Progetto e Processo di Verifica e Controllo }
 			Questo macro-processo, derivato dall'unione dei processi 6.3.1 e 6.3.2 previsti dallo standard ISO/IEC 12207:2008, ha lo scopo di pianificare le attività richieste dal progetto.
-\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
+			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Rispetto della pianificazione}
 				Ogni attività di un processo verrà svolta da parte di colui a cui è stata assegnata, rispettando la pianificazione temporale stabilita nel documento \PdP e svolgendo tutti i compiti in cui essa si articola.
 				\subparagraph{Rispetto del budget}
 				I costi di ogni processo dovranno rientrare nel budget previsto dal documento \PdP.
+				
 			\paragraph{Processo di costruzione del software}
 			Il processo definisce le attività principali volte alla produzione di unità software eseguibili che riflettano quanto identificato a livello di progettazione.
-\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
+			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Rispetto della produttività di codifica}
 				L'attività di codifica dovrà risultare opportunamente intensa in modo tale da garantire la produzione del sistema software nei tempi previsti.
+				
 			\paragraph{Processo di test per la qualifica del software/sistema}
 			Il macro-processo, derivante dall'unione dei processi 6.4.6 e 7.1.7 dello standard ISO/IEC 12207:2008, ha lo scopo che ogni requisito individuato sia stato implementato nel prodotto.
-\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
+			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Corretto funzionamento del sistema e integrazione delle componenti}
 				Le funzionalità richieste sono state integrate all'interno di un prodotto software le cui diverse componenti interagiscono fra esse in modo coerente e senza criticità, a formare un sistema coeso e funzionante.
+			
 			\paragraph{Processo di gestione della documentazione del software}
 			Il processo, corrispondente al processo 7.2.1 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di produrre e gestire la documentazione relativa alle funzionalità e alle caratteristiche del sistema software prodotto.
-\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
+			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Leggibilità della documentazione}
 				La documentazione prodotta sarà quanto più chiara e comprensibile a tutti gli \gloss{stakeholder} coinvolti nel progetto.
+			
 			\paragraph{Processo di Verifica del Software}
 			Il processo, corrispondente al processo 7.2.4 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di verificare se qualsiasi elemento del sistema soddisfa i requisiti ad esso correlati.
-\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
+			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Copertura codice}
 				I test effettuati sulle diverse componenti del prodotto software andranno a considerare una gran parte delle possibili casistiche d'utilizzo e ad esplorare una notevole fetta del codice sorgente ad esso relativo.
+	
 	\subsection{Qualità di prodotto}
 	Per garantire una buona qualità di prodotto, il gruppo \hx{} ha individuato dallo standard ISO/IEC 9126:2001 le qualità che ritiene di maggior importanza durante il ciclo di vita del prodotto e ha individuato gli obiettivi e le metriche coerenti con i livelli di qualità stabiliti.
-		\subsubsection{Standard adottato}
-		Lo Standard ISO/IEC 9126:2001 si articola in quattro parti:
+	\subsubsection{Standard adottato}
+	Lo Standard ISO/IEC 9126:2001 si articola in quattro parti:
 		\begin{enumerate}
 		\item Modello della qualità del software (9126-1);
 			\item Metriche per la qualità esterna (9126-2);
@@ -248,9 +253,9 @@ Le misurazioni e le valutazioni risultanti dal monitoraggio dei diversi processi
 		\subsubsection{Misure}
 		Le misure raccolte relativamente alle metriche stabilite per valutare la qualità di processi e prodotti vengono rapportate ad una scala che ne stabilisce l'accettabilità o meno. \\In particolare per ogni metrica vengono indicati i seguenti due range:
 			\begin{itemize}
-			\item \textbf{Ottimale:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto pienamente gli obiettivi di qualità pianificati dal team. \\L'obiettivo è quello che tutti i valori raccolti rientrino all'interno di tale intervallo.
-			\item \textbf{Accettabile:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto la soglia minima di qualità prevista dal gruppo.
-\\Risulta implicitamente che valori non rientranti nell'intervallo di accettabilità perché eccessivamente bassi sono non accettabili e richiedono immediate strategie correttive da parte del team per porre rimedio agli errori rilevati e garantire un deciso miglioramento del prodotto o processo in esame in modo tale che la sua qualità possa rientrare almeno negli obiettivi di minimo previsti.		
+				\item \textbf{Ottimale:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto pienamente gli obiettivi di qualità pianificati dal team. \\L'obiettivo è quello che tutti i valori raccolti rientrino all'interno di tale intervallo.
+				\item \textbf{Accettabile:} se il valore misurato rientra in tale range risulta accettabile e indica che l'oggetto sottoposto a verifica ha raggiunto la soglia minima di qualità prevista dal gruppo.
+			\\Risulta implicitamente che valori non rientranti nell'intervallo di accettabilità perché eccessivamente bassi sono non accettabili e richiedono immediate strategie correttive da parte del team per porre rimedio agli errori rilevati e garantire un deciso miglioramento del prodotto o processo in esame in modo tale che la sua qualità possa rientrare almeno negli obiettivi di minimo previsti.		
 			\end{itemize}
 	
 
@@ -259,106 +264,106 @@ Le misurazioni e le valutazioni risultanti dal monitoraggio dei diversi processi
 			Tale metrica indica di quanto le macro-attività di progetto si discostano temporalmente rispetto alla pianificazione originaria definita nel documento \PdP . 
 			\\Viene calcolata come la differenza fra la data pianificata di fine di un'attività e la data di fine reale di quell'attività; un valore di schedule variance minore di zero indica che l'attività di progetto considerata sta richiedendo più tempo di quanto pianificato, se pari a zero indica invece che essa è perfettamente in linea con le tempistiche previste mentre se è addirittura strettamente positivo indica che sta procedendo più speditamente di quanto considerato. 
 			\\Da sottolineare che l'utilizzo di periodi di \gloss{slack} aumenta la possibilità che la schedule variance assuma valori positivi.
-\\I range stabiliti per la metrica sono i seguenti:
+			\\I range stabiliti per la metrica sono i seguenti:
 				\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+					\item Range ottimale: $\geq{-10}$\%;
+					\item Range di accettazione: $\geq{0}$;
 				\end{itemize}
 
 			\paragraph{Budget Variance}
 			Tale metrica indica quanto il costo di una particolare attività di progetto si discosta rispetto alla pianificazione originaria definita nel documento \PdP. 
 			\\Viene calcolata come la differenza fra il costo preventivato per un'attività e il costo effettivamente sostenuto per la stessa; un valore di budget variance minore di zero indica che l'attività di progetto considerata sta richiedendo più risorse di quanto pianificato, se pari a zero indica invece che essa è perfettamente in linea con i costi previsti mentre se è addirittura strettamente positivo indica che sta procedendo con più efficienza di quanto considerato.
-\\I range stabiliti per la metrica sono i seguenti:
-			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+			\\I range stabiliti per la metrica sono i seguenti:
+				\begin{itemize}
+					\item Range ottimale: $\geq{0}$;
+					\item Range di accettazione: $\geq{-10}$\%;
 				\end{itemize}
 				
 			\paragraph{Produttività di codifica}
 			Tale metrica indica il numero medio di linee di codice prodotto per ora/persona.
-\\La misura viene effettuata nel modo seguente:
-			\begin{center}
-			$\frac{numero linee di codice sorgente prodotte}{ore persona utilizzate per la codifica}$
-			\end{center}
-I range stabiliti per la metrica sono i seguenti:
+			\\La misura viene effettuata nel modo seguente:
+				\begin{equation}
+					\frac{numero~linee~di~codice~sorgente~prodotte}{ore~persona~utilizzate~per~la~codifica}
+				\end{equation}
+			I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+					\item Range ottimale: $\geq{3}$;
+					\item Range di accettazione: $\geq{10}$;
 				\end{itemize}
 				
 			\paragraph{Test di Unità eseguiti}
 			Tale metrica indica la percentuale di test di unità eseguiti.
-\\La misura viene effettuata nel modo seguente:
-			\begin{center}
-			$\frac{numero test unità eseguiti}{numero test unità pianificati}\times100$
-			\end{center}
+			\\La misura viene effettuata nel modo seguente:
+				\begin{equation}
+					\frac{numero~test~unità~eseguiti}{numero~test~unità~pianificati}\times100
+				\end{equation}
 			I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+					\item Range ottimale: 100-100;
+					\item Range di accettazione: 85-100;
 				\end{itemize}
 				
 			\paragraph{Test di Integrazione eseguiti}
 				Tale metrica indica la percentuale di test di integrazione eseguiti.
-\\La misura viene effettuata nel modo seguente:
-			\begin{center}
-			$\frac{numero test integrazione eseguiti}{numero test integrazione pianificati}\times100$
-			\end{center}
+			\\La misura viene effettuata nel modo seguente:
+				\begin{equation}
+					\frac{numero~test~integrazione~eseguiti}{numero~test~integrazione~pianificati}\times100
+				\end{equation}
 			I range stabiliti per la metrica sono i seguenti:
-			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+				\begin{itemize}
+					\item Range ottimale: 70-100;
+					\item Range di accettazione: 55-100;
 				\end{itemize}
 				
 			\paragraph{Test di Sistema eseguiti}
-				Tale metrica indica la percentuale di test di sistema eseguiti.
-\\La misura viene effettuata nel modo seguente:
-			\begin{center}
-			$\frac{numero test sistema eseguiti}{numero test sistema pianificati}\times100$
-			\end{center}
+			Tale metrica indica la percentuale di test di sistema eseguiti.
+			\\La misura viene effettuata nel modo seguente:
+				\begin{equation}
+					\frac{numero~test~sistema~eseguiti}{numero~test~sistema~pianificati}\times100
+				\end{equation}
 			I range stabiliti per la metrica sono i seguenti:
-			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+				\begin{itemize}
+					\item Range ottimale: 80-100;
+					\item Range di accettazione: 70-100;
 				\end{itemize}
 				
-			\paragraph{Test di Validazione eseguiti}
-			Tale metrica indica la percentuale di test di validazione eseguiti.
-\\La misura viene effettuata nel modo seguente:
-			\begin{center}
-			$\frac{numero test validazione eseguiti}{numero test validazione pianificati}\times100$
-			\end{center}
+			\paragraph{Test di Accettazione eseguiti}
+			Tale metrica indica la percentuale di test di accettazione eseguiti.
+			\\La misura viene effettuata nel modo seguente:
+				\begin{equation}
+					\frac{numero~test~accettazione~eseguiti}{numero~test~accettazione~pianificati}\times100
+				\end{equation}
 			I range stabiliti per la metrica sono i seguenti:
-			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+				\begin{itemize}
+					\item Range ottimale: 100-100;
+					\item Range di accettazione: 90-100;
 				\end{itemize}
 				
 			\paragraph{Indice Gulpease}
 			Tale metrica, tarata sulla lingua italiana, misura la qualità di un documento andando a stimarne il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe – cosa che ne consente una implementazione automatizzata fortemente affidabile. Tale indice, inoltre, considera principalmente due variabili linguistiche: la lunghezza delle parole e la lunghezza delle frasi in rapporto al numero delle lettere.
-\\La formula per il calcolo dell'indice di \gloss{Gulpease} è la seguente:
-			\begin{center}
-			$89+\frac{300\times(numero delle frasi)-10\times(numero delle lettere)}{numero delle parole}$
-			\end{center}
-Il risultato è un valore compreso nell'intervallo [0,100], dove il valore 100 indica la più alta leggibilità, mentre 0 la più bassa. In generale risulta che testi con indice:
-			\begin{itemize}
-			\item inferiore a 80 sono difficili da leggere per chi ha la licenza elementare
-			\item inferiore a 60 sono difficili da leggere per chi ha la licenza media
-			\item inferiore a 40 sono difficili da leggere per chi ha un diploma superiore	
-			\end{itemize}
-Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione siano relativamente bassi; tuttavia non bisogna dimenticare che la documentazione prodotta relativamente al progetto corrente è inevitabilmente ricca di tecnicismi e terminologie tecniche ed è rivolta a lettori con un significativo grado di istruzione e una certa familiarità con gli ambiti affrontati.
-\\I range stabiliti per la metrica sono i seguenti:
-			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+			\\La formula per il calcolo dell'indice di \gloss{Gulpease} è la seguente:
+				\begin{equation}
+					89+\frac{300\times(numero~delle~frasi)-10\times(numero~delle~lettere)}{numero~delle~parole}
+				\end{equation}
+			Il risultato è un valore compreso nell'intervallo [0,100], dove il valore 100 indica la più alta leggibilità, mentre 0 la più bassa. In generale risulta che testi con indice:
+				\begin{itemize}
+					\item inferiore a 80 sono difficili da leggere per chi ha la licenza elementare
+					\item inferiore a 60 sono difficili da leggere per chi ha la licenza media
+					\item inferiore a 40 sono difficili da leggere per chi ha un diploma superiore	
+				\end{itemize}
+			Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione siano relativamente bassi; tuttavia non bisogna dimenticare che la documentazione prodotta relativamente al progetto corrente è inevitabilmente ricca di tecnicismi e terminologie tecniche ed è rivolta a lettori con un significativo grado di istruzione e una certa familiarità con gli ambiti affrontati.
+			\\I range stabiliti per la metrica sono i seguenti:
+				\begin{itemize}
+					\item Range ottimale: 60-100;
+					\item Range di accettazione: 40-100;
 				\end{itemize}
 				
 			\paragraph{Copertura Codice}
 			Indica la percentuale di istruzioni che sono eseguite durante i test. Una maggiore percentuale di istruzioni coperte dai test eseguiti rappresenta una maggiore probabilità che le componenti testate abbiano un ridotto numero di errori. Si può ridurre tale indice tramite l'utilizzo di metodi semplici che non richiedono test, come i metodi \textit{getter} e \textit{setter}.
 			I range stabiliti per la metrica sono i seguenti:
-			\begin{itemize}
-					\item Range ottimale:
-					\item Range di accettazione:
+				\begin{itemize}
+					\item Range ottimale: 60-100;
+					\item Range di accettazione: 40-100;
 				\end{itemize}
 				
 	\subsection{Metriche per il prodotto}
@@ -372,8 +377,8 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 			\end{equation}
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 100-100;
+				\item Range di accettazione: 100-100;
 			\end{itemize}
 			
 			\paragraph{Copertura Requisiti Desiderabili}
@@ -384,8 +389,8 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 			\end{equation}
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 80-100;
+				\item Range di accettazione: 40-100;
 			\end{itemize}
 		\subsubsection{Affidabilità \label{S2}}
 		Per quanto concerne l'affidabilità del prodotto software, il gruppo ha ritenuto importante la valutazione dei test, i quali ricoprono quindi un ruolo essenziale nel ciclo di vita del software.
@@ -393,12 +398,12 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 			Tale metrica indica la percentuale di test superati.
 			\\La misura viene effettuata nel modo seguente:
 			\begin{equation}
-			\frac{~numero~test~eseguiti}{~numero~test~pianificati}\times{100}
+				\frac{~numero~test~eseguiti}{~numero~test~pianificati}\times{100}
 			\end{equation}
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 100-100;
+				\item Range di accettazione: 90-100;
 			\end{itemize}
 		\subsubsection{Efficienza \label{S3}}
 		Il gruppo \hx{} ha deciso di seguire metriche relative all'efficienza del software riguardanti taluni vincoli che il codice deve rispettare.
@@ -406,16 +411,16 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 			Tale metrica è una misura della profondità di annidamento delle istruzioni \textit{if}/cicli \textit{for} in un programma. Istruzioni \textit{if}/cicli \textit{for} profondamente annidati sono difficili da comprendere e portano potenzialmente all'errore.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-4;
+				\item Range di accettazione: 0-10;
 			\end{itemize}
 			
 			\paragraph{Chiamate innestate di metodi}
 			Tale metrica è una misura del numero di chiamate innestate di metodi in un particolare metodo. Un grande numero di chiamate innestate di metodi può portare alla saturazione dello stack, soprattutto in caso di un grande numero di parametri, quindi è necessario limitarne il numero.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-5;
+				\item Range di accettazione: 0-10;
 			\end{itemize}
 		\subsubsection{Manutenibilità \label{S4}}
 		Per garantire un elevato grado di manutenibilità, si è deciso adottare un discreto numero di metriche che spaziano in diversi aspetti del programma.
@@ -423,40 +428,40 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 			Tale metrica è una misura del numero di statement di un particolare metodo. Avere un numero di statement per metodo relativamente basso permette di tenere un livello di manutenibilità del codice accettabile.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-30;
+				\item Range di accettazione: 0-50;
 			\end{itemize}
 			
 			\paragraph{Numero di parametri per metodo}
 			La metrica è la misura del numero totale di parametri formali in ingresso di un particolare metodo. Se il numero di parametri è elevato, lo stack del programma può essere riempito rapidamente in caso di multiple chiamate innestate e il metodo può risultare difficilmente comprensibile e manutenibile; inoltre ciò potrebbe indicare un metodo troppo complesso e non efficacemente suddiviso in sotto-metodi.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-4;
+				\item Range di accettazione: 0-10;
 			\end{itemize}
 			
 			\paragraph{Numero di campi dati per classe}
 			La metrica permette di verificare che il numero di campi dati appartenenti ad una determinata classe rientri tra i valori stabiliti. Questo consente di stimare il grado di manutenibilità e comprensibilità del codice e verificane l'accettabilità.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-10;
+				\item Range di accettazione: 0-25;
 			\end{itemize}
 			
 			\paragraph{Numero di metodi per classe}
-			Tale metrica indica il numero di metodi definiti in una classe. Un valore molto alto potrebbe indicare una cattiva decomposizione delle funzionalità a livello di progettazione. 
+			Tale metrica indica il numero di metodi definiti in una classe. Un valore molto alto potrebbe indicare una cattiva decomposizione delle funzionalità a livello di progettazione. Vengono esclusi dal conteggio i metodi textit{setter} e textit{getter}.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-15;
+				\item Range di accettazione: 0-30;
 			\end{itemize}
 			
 			\paragraph{Grado di accoppiamento}
 			Tale metrica è una misura del numero di dipendenze di una classe con le altre contenute all'interno del suo stesso package. Avere poche dipendenze tra classi implica che ci sia un maggiore grado di disaccoppiamento. Questo aumenta molto la manutenibilità e la comprensibilità del codice.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-3;
+				\item Range di accettazione: 0-7;
 			\end{itemize}
 			
 			\paragraph{Complessità ciclomatica}
@@ -472,16 +477,20 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 		    \end{itemize}
 			I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 1-10;
+				\item Range di accettazione: 1-15;
 			\end{itemize}
 			
-			\paragraph{Lunghezza media di un modulo}
-			La metrica è una misura della dimensione media di un particolare modulo in termini di linee di codice. Difatti avere moduli di grandi dimensioni rende difficoltosa la manutenibilità e la comprensibilità del codice.
-			\\I range stabiliti per la metrica sono i seguenti:
+			\paragraph{Lunghezza media di un'unità}
+			La metrica è una misura della dimensione media di una particolare unità in termini di linee di codice. Difatti avere unità di grandi dimensioni rende difficoltosa la manutenibilità e la comprensibilità del codice.
+			\\La misura viene effettuata nel modo seguente:
+			\begin{equation}
+				\frac{\sum(numero~linee~di~codice~dell'~unità~i)}{numero~totale~di~unità}
+			\end{equation}
+			I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 100-300;
+				\item Range di accettazione: 100-500;
 			\end{itemize}
 			
 			\paragraph{Fan-in}
@@ -489,33 +498,37 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 			Un alto valore di fan-in per una certa funzione implica che essa è strettamente legata al resto del progetto e che sue eventuali modifiche avranno ampi effetti a catena.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-5;
+				\item Range di accettazione: 0-20;
 			\end{itemize}
 			
 			\paragraph{Fan-out}
 			Tale metrica è una misura del numero di funzioni o metodi che sono chiamati da una certa funzione o metodo. Un alto valore di fan-out per una certa funzione suggerisce che la sua complessità generale può essere alta a causa della complessità della logica di controllo necessaria per coordinare i componenti chiamati.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-5;
+				\item Range di accettazione: 0-20;
 			\end{itemize}
 			
 			\paragraph{Rapporto linee di commento su linee di codice}
-			Tale metrica indica il rapporto tra linee di commento e linee di codice (escludendo le linee vuote).
+			Tale metrica indica il rapporto, normalizzato fra 0 e 100, tra linee di commento e linee di codice (escludendo le linee vuote).
 			Essa risulta utile per stimare la manutenibilità del codice dal momento che un'adeguata documentazione del codice ne permette una maggiore e più rapida comprensione.
-			\\I range stabiliti per la metrica sono i seguenti:
+			\\La misura viene effettuata nel modo seguente:
+			\begin{equation}
+					\frac{numero~linee~di~commento~scritte}{numero~linee~di~codice~sorgente~prodotte}\times{100}
+				\end{equation}
+			I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: $\geq{30}$;
+				\item Range di accettazione: $\geq{20}$;
 			\end{itemize}
 			
 			\paragraph{Validazione W3C}
 			L'applicazione web deve superare correttamente il test di validazione offerto da W3C con un numero di errori gravi pari a zero. Gli avvisi e le inesattezze che non compromettono la funzionalità del sito sono accettate fino a un massimo di 20 per pagina.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
+				\item Range ottimale: 0-0;
+				\item Range di accettazione: 0-20;
 			\end{itemize}
 	
 	\newpage
@@ -569,5 +582,5 @@ Si potrebbe osservare che i valori indicati nei range ottimali e di accettazione
 		\item \textbf{Test di sistema [TS]}: test con i quali si tenta di verificare che il funzionamento e il comportamento dell'architettura siano corretti;
 		\item \textbf{Test di accettazione [TA]}: test per verificare che il prodotto soddisfi le richieste del proponente.
 	\end{itemize}
-
+	Si sottolinea che la specifica dei test delle diverse tipologie verrà inserita nel presente documento a seguito della fase di progettazione del \gloss{prodotto} in esame.
 \end{document}
